# trakt_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.py  debug_simkl_fetch.py  install.sh  pyproject.toml  requirements.txt  setup.py  simkl_token.json
core/: __init__.py  fetch_data.py  fetch_data_simkl.py  mark_watched.py  mark_watched_simkl.py  profile_taste.py  recommend.py  search_and_mark.py
docs/: Trakt agent to get personalized tv-movie suggestions.md  recommendationprompt.md
output/: Trakt Taste Profile.json
resources/: preferences.json.example  secrets.json.example
scripts/: __init__.py  auth.py  auth_simkl.py  configure_llm.py  exchange_pin.py  measure_performance.py  update_recommendations.sh  validate_llm.py
tests/: test_core.py  test_integration_qwen.py
utils/: __init__.py  direct_recommend.py  generate_now.py  test_generate.py  test_llm.py
